--- a/src/scss/components/_popup.scss
+++ b/src/scss/components/_popup.scss
@@ -1,22 +1,24 @@
 .popup {
   position: fixed;
   pointer-events: none;
-  max-width: 100vw;
-  max-height: 100vh;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 200;
   top: 0;
   left: 0;
-  padding-top: 50px;
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: var(--blur-background-color);
   backdrop-filter: blur(3px);
   opacity: 0;
   transition: opacity 0.3s ease-in;
+  overflow: auto;
+
+  &__wrapper {
+    height: 100%;
+    min-height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
   &__form {
     max-width: 80%;
